--- a/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/psocionamento-de-elementos.css
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/psocionamento-de-elementos.css
@@ -1,19 +1,36 @@
 .super-mario {
     width: 200px;
+    position: absolute;
+    z-index: 1;
   }
   
   .goomba {
     width: 100px;
+    position: absolute;
+    z-index: 2;
+    top: 350px;
+    left: 70px;
   }
   
   .baloon {
-  
+    position: absolute;
+    z-index: 3;
+    top: 50px;
+    left: 300px;
   }
   
   .speach {
     font-size: 25px;
+    position: absolute;
+    z-index: 4;
+    top: 80px;
+    left: 320px;
   }
   
   .bowser {
     width: 200px;
+    position: absolute;
+    z-index: 5;
+    top: 190px;
+    left: 595px;
   }
