--- a/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses.css
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/agrupamento-de-seletores-e-pseudoclasses.css
@@ -2,11 +2,11 @@ h1 {
     text-align: center;
 }
 
-li:hover {
+ol li:hover {
     background-color: aquamarine;
 }
 
-li:active {
+ol li:active {
     font-family: monospace;
 }
 
