Estiliza hero e section title

--- a/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.css
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-2-primeiros-passos-em-css/aula-ao-vivo-2.css
@@ -10,3 +10,16 @@ p, li {
 h1, h3, .h-green {
     color: #11a36a;
 }
+
+.hero-title {
+    color: #0a7e51;
+    line-height: 55px;
+    font-weight: 600;
+    font-size: 45px;
+}
+
+.section-title {
+    line-height: 42px;
+    font-weight: 600;
+    font-size: 28px;
+}
