--- a/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/aula-ao-vivo-3.css
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/aula-ao-vivo-3.css
@@ -73,7 +73,6 @@ h1, h3, .h-green {
     padding: 30px 70px 90px 70px;
     width: 80%;
     margin: auto;
-    background-color: green;
 }
 
 .student-text {
@@ -88,5 +87,48 @@ h1, h3, .h-green {
     margin: 10px;
     display: inline-block;
     vertical-align: middle;
-    background-color: red;
+}
+
+.workWithMe {
+    padding: 30px 70px;
+    background-color: #e7e7e7;
+}
+
+.skills {
+    padding: 30px 70px;
+    width: 80%;
+    margin: auto;
+    background-color: rgb(188, 183, 183);
+}
+
+.skillsText {
+    float: left;
+    max-width: 80%;
+}
+
+.work {
+    float: right;
+    padding-top: 30px;
+}
+
+.button-work {
+    color: #fff;
+    background-color: #11a36a;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.footer {
+    clear: both;
+    text-align: center;
+    padding-top: 25px;
+}
+
+.footer h4 {
+    margin-bottom: 25px;
+}
+
+.skills li {
+    margin-bottom: 23px;
 }
