--- a/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/aula-ao-vivo-3.css
+++ b/fundamentos/secao-3-introducao-html-e-css/dia-3-seletores-e-posicionamento/aula-ao-vivo-3.css
@@ -95,9 +95,8 @@ h1, h3, .h-green {
 }
 
 .skills {
+    overflow: hidden;
     padding: 30px 70px;
-    width: 80%;
-    margin: auto;
     background-color: rgb(188, 183, 183);
 }
 
@@ -131,4 +130,9 @@ h1, h3, .h-green {
 
 .skills li {
     margin-bottom: 23px;
+    list-style-type: square;
+}
+
+.skillsText h3 {
+    margin-bottom: 30px;
 }
